--- a/public/home.html
+++ b/public/home.html
@@ -18,7 +18,7 @@
         <div class="jumbotron">
             <h1 class="display-3">Friend Finder</h1>
             <p class="lead">Answer a few basic questions</p>
-            <hr class="my-2">Then find the friend with the greatest compatibility </p>
+            <hr class="my-2">Then find the friend with the greatest match </p>
             <p class="lead">
                 <a class="btn btn-primary btn-lg" href="/survey" role="button">Go to Survey</a>
             </p>
